Add I18n for DO, DOCs, events, groups, locations, notes, repos, resources, rights, subjects and users.. and a few other things.. 'all' labels should be sourced from the locales file now

--- a/frontend/app/views/403.erb
+++ b/frontend/app/views/403.erb
@@ -1,4 +1,4 @@
 <div class="alert alert-error">
-  <h2>Unable to Access Page</h2>
-  <p>The page you've tried to access may no longer exist or you may not have permission to view it.</p>
+  <h2><%= I18n.t("errors.403") %></h2>
+  <p><%= I18n.t("errors.403_message") %></p>
 </div>
