--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -1,5 +1,5 @@
 <h2>
-   <%= @digital_object.title.blank? ? "New Digital Object" : @digital_object.title %>  <span class="label label-info">Digital Object</span>
+   <%= @digital_object.title.blank? ? "#{I18n.t("actions.new_prefix")} #{I18n.t("digital_object._html.singular")}" : @digital_object.title %>  <span class="label label-info"><%= I18n.t("digital_object._html.singular") %></span>
 </h2>
 
 <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
@@ -8,7 +8,7 @@
 
   <% define_template "digital_object", jsonmodel_definition(:digital_object) do |form| %>
     <section id="basic_information">
-      <h3>Basic Information</h3>
+      <h3><%= I18n.t("digital_object._html.section.basic_information") %></h3>
       <%= form.label_and_textfield "title" %>
       <%= form.label_and_textfield "digital_object_id" %>
       <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
