--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -2,9 +2,9 @@
 
 <section id="notes" class="subrecord-form">
   <h3 class="subrecord-form-heading">
-    Notes
+    <%= I18n.t("note._html.plural") %>
     <div class="btn-group pull-right">
-      <button class="btn btn-small  dropdown-toggle" data-toggle="dropdown">Add Note <span class="caret"></span></button>
+      <button class="btn btn-small  dropdown-toggle" data-toggle="dropdown"><%= I18n.t("actions.add") %> <%= I18n.t("note._html.singular") %> <span class="caret"></span></button>
       <ul class="dropdown-menu subrecord-selector">
         <li>
           <select>
@@ -14,7 +14,7 @@
           </select>
         </li>
         <li class="form-actions">
-          <button class="btn btn-small add-note-for-type-btn">Add Note</button>
+          <button class="btn btn-small add-note-for-type-btn"><%= I18n.t("actions.add") %> <%= I18n.t("note._html.singular") %></button>
         </li>
       </ul>
     </div>
