--- a/frontend/app/views/users/show.html.erb
+++ b/frontend/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
    </div>
    <div class="span9 record-pane">
      <%= readonly_context :user, @user.to_hash do |readonly| %>
-      <h2><%= @user.name %>  <span class="label label-info">User</span></h2>
+      <h2><%= @user.name %>  <span class="label label-info"><%= I18n.t("user._html.singular") %></span></h2>
 
       <section id="basic_information">
         <h3>Profile</h3>
