--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -32,9 +32,9 @@
                <td><%= Date.strptime(accession.accession_date, "%Y-%m-%d") %></td>
                <td>
                   <div class="btn-group" style="float: right">
-                    <%= link_to "View", {:controller => :accessions, :action => :show, :id => accession.id}, :class => "btn btn-mini" %>
+                    <%= link_to I18n.t("actions.view"), {:controller => :accessions, :action => :show, :id => accession.id}, :class => "btn btn-mini" %>
                     <% if user_can?('update_repository') and not accession.suppressed %>
-                      <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => accession.id}, :class => "btn btn-mini" %>
+                      <%= link_to I18n.t("actions.edit"), {:controller => :accessions, :action => :edit, :id => accession.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
                </td>
