--- a/frontend/app/views/digital_object_components/_edit_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_edit_inline.html.erb
@@ -7,8 +7,8 @@
       <div class="span9 record-pane">
         <%= render :partial => "digital_object_components/form_container", :locals => {:form => form} %>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Digital Object Component</button>
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._html.singular") %></button>
+          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
         </div>
       </div>
     </div>
