--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -8,14 +8,14 @@
       <div class="btn-group" style="float: right">
          <% if @digital_object_id %>
             <% if user_can?('update_repository') %>
-              <%= link_to "Edit", {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
+              <%= link_to I18n.t("actions.edit"), {:controller => :digital_objects, :action => :edit, :id => @digital_object_id, :anchor => "digital_object_component_#{@digital_object_component.id}"}, :class => "btn btn-small" %>
             <% end %>
          <% end %>
       </div>
 
-      <h2><%= @digital_object_component.title %> <span class="label label-info">Digital Object</span></h2>
+      <h2><%= @digital_object_component.title %> <span class="label label-info"><%= I18n.t("digital_object_component._html.singular") %></span></h2>
       <section id="basic_information">
-        <h3>Basic Information</h3>
+        <h3><%= I18n.t("digital_object_component._html.section.basic_information") %></h3>
 
         <%= readonly.label_and_textfield "label" %>
         <%= readonly.label_and_textfield "title" %>
