--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -1,44 +1,44 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
-    <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#basic_information"><%= I18n.t("digital_object_component._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @digital_object_component.extents.length > 0 %>
-      <li><a href="#digital_object_component_extents_">Extents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_extents_"><%= I18n.t("extent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @digital_object_component.dates.length > 0 %>
-      <li><a href="#digital_object_component_dates_">Dates <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_dates_"><%= I18n.t("date._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @digital_object_component.linked_agents.length > 0 %>
-      <li><a href="#digital_object_component_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_linked_agents_"><%= I18n.t("linked_agent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @digital_object_component.subjects.length > 0 %>
-      <li><a href="#digital_object_component_subjects_">Subjects <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_subjects_"><%= I18n.t("subject._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object_component.notes.length > 0 %>
-      <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#notes"><%= I18n.t("note._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object_component.external_documents.length > 0 %>
-      <li><a href="#digital_object_component_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_external_documents_"><%= I18n.t("external_document._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object_component.rights_statements.length > 0 %>
-      <li><a href="#digital_object_component_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_component_rights_statements_"><%= I18n.t("rights_statement._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
       <div class="form-actions">
         <% if controller.action_name === "new" or controller.action_name === "create" %>
           <div class="btn-group btn-submit-group">
-            <button type="submit" class="btn btn-primary">Save Digital Object Component</button>
-            <button type="button" id="createPlusOne" class="btn btn-primary">+1</button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._html.singular") %></button>
+            <button type="button" id="createPlusOne" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
         <% else %>
-          <button type="submit" class="btn btn-primary">Save Digital Object Component</button>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object_component._html.singular") %></button>
         <% end %>
       </div>
     <% end %>
