--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -1,39 +1,39 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
-    <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#basic_information"><%= I18n.t("digital_object._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" or @digital_object.extents.length > 0 %>
-      <li><a href="#digital_object_extents_">Extents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_extents_"><%= I18n.t("extent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @digital_object.dates.length > 0 %>
-      <li><a href="#digital_object_dates_">Dates <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_dates_"><%= I18n.t("date._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
 
     <% if controller.action_name != "show" || @digital_object.linked_agents.length > 0 %>
-      <li><a href="#digital_object_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_linked_agents_"><%= I18n.t("linked_agent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @digital_object.subjects.length > 0 %>
-      <li><a href="#digital_object_subjects_">Subjects <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_subjects_"><%= I18n.t("subject._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object.notes.length > 0 %>
-      <li><a href="#notes">Notes <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#notes"><%= I18n.t("note._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object.external_documents.length > 0 %>
-      <li><a href="#digital_object_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_external_documents_"><%= I18n.t("external_document._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @digital_object.rights_statements.length > 0 %>
-      <li><a href="#digital_object_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#digital_object_rights_statements_"><%= I18n.t("rights_statement._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Digital Object</button>
+        <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("digital_object._html.singular") %></button>
       </li>
     <% end %>
   </ul>
