--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -1,11 +1,11 @@
-<%= setup_context :object => @group, :title => (!@group.description.empty? ? @group.description : "Edit Group") %>
+<%= setup_context :object => @group, :title => (!@group.description.empty? ? @group.description : "#{I18n.t("actions.edit")} #{I18n.t("group._html.singular")}") %>
 
 <div class="row-fluid">
   <div class="span3">
   </div>
 
   <div class="span9 record-pane">
-    <h2><%= !@group.description.empty? ? @group.description : "Edit Group " %> <span class="label label-info">Group</span></h2>
+    <h2><%= !@group.description.empty? ? @group.description : "#{I18n.t("actions.edit")} #{I18n.t("group._html.singular")}" %> <span class="label label-info"><%= I18n.t("group._html.singular") %></span></h2>
 
     <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
       <%= form_context :group, @group.to_hash(true) do |form| %>
