--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -6,10 +6,10 @@
 
    <div class="span9 record-pane">
      <div class="btn-group">
-       <%= link_to "Create Group", {:controller => :groups, :action => :new}, :class => "btn" %>
+       <%= link_to "#{I18n.t("actions.create")} #{I18n.t("group._html.singular")}", {:controller => :groups, :action => :new}, :class => "btn" %>
      </div>
 
-     <h2>Groups</h2>
+     <h2><%= I18n.t("group._html.plural") %></h2>
 
      <table class="table table-striped table-bordered table-condensed">
        <thead>
@@ -23,7 +23,7 @@
          <tr>
            <td><%= group.description %> <small>(<%= group.group_code %>)</small></td>
            <td>
-             <%= link_to "Edit", {:controller => :groups, :action => :edit, :id => group.id}, :class => "btn btn-mini" %>
+             <%= link_to I18n.t("actions.edit"), {:controller => :groups, :action => :edit, :id => group.id}, :class => "btn btn-mini" %>
            </td>
          </tr>
          <% end %>
