--- a/frontend/app/views/groups/new.erb
+++ b/frontend/app/views/groups/new.erb
@@ -4,11 +4,11 @@
   <div class="span3"></div>
 
   <div class="span9 record-pane">
-    <h2>New Group <span class="label label-info">Group</span></h2>
+    <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("group._html.singular") %> <span class="label label-info"><%= I18n.t("group._html.singular") %></span></h2>
 
     <%= form_for @group, :as => "group", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
       <%= form_context :group, @group.to_hash(true) do |form| %>
-			 	<%= render :partial => "shared/form_messages", :locals => {:form => form} %>
+        <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
         <%= form.label_and_textfield :group_code %>
         <%= render :partial => "groups/form", :locals => {:form => form} %>
       <% end %>
