--- a/frontend/app/views/import/index.html.erb
+++ b/frontend/app/views/import/index.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :title => "Import an EAD File" %>
+<%= setup_context :title => I18n.t("import.ead_title") %>
 
 <%= form_tag '/import/upload', :multipart => true, :class => 'form-horizontal', :id => "import" do %>
   <div class="row-fluid">
@@ -18,9 +18,9 @@
       <% end %>
 
       <% if @import_results %>
-        <h3>Import Report</h3>
+        <h3><%= I18n.t("import.import_report") %></h3>
         <pre><%= @import_results %></pre>
-        <h3>Import Another EAD File</h3>
+        <h3><%= I18n.t("import.ead_import_another") %></h3>
       <% end %>
 
       <fieldset>
@@ -35,11 +35,12 @@
       </fieldset>
 
       <div class="form-actions">
-        <button type="submit" class="btn btn-primary"><%= image_tag "archivesspace/btn-busy.gif", :class=>"btn-busy-icon" %> 
-          <span class="btn-label">Import</span>
-          <span class="btn-busy-label">Importing...</span>
+        <button type="submit" class="btn btn-primary">
+          <%= image_tag "archivesspace/btn-busy.gif", :class=>"btn-busy-icon" %> 
+          <span class="btn-label"><%= I18n.t("import.submit") %></span>
+          <span class="btn-busy-label"><%= I18n.t("import.submit_busy_message") %></span>
         </button>
-        <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+        <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
       </div>
     </div>
   </div>
