--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -3,10 +3,10 @@
 %>
 
 <section id="<%= section_id %>">
-  <h3>Agent Links</h3>
+  <h3><%= I18n.t("linked_agent._html.plural") %></h3>
   <div class="row-fluid">
-    <div class="span3"><strong>Role</strong></div>
-    <div class="span8"><strong>Agent</strong></div>
+    <div class="span3"><strong><%= I18n.t("linked_agent.role") %></strong></div>
+    <div class="span8"><strong><%= I18n.t("linked_agent.ref") %></strong></div>
   </div>
   <% linked_agents.each_with_index do | link, index | %>
     <div class="row-fluid">
