--- a/frontend/app/views/notes/_show.html.erb
+++ b/frontend/app/views/notes/_show.html.erb
@@ -16,7 +16,7 @@
 <%= render :partial => "notes/template" %>
 
 <section id="notes" class="subrecord-form">
-  <h3 class="subrecord-form-heading">Notes</h3>
+  <h3 class="subrecord-form-heading"><%= I18n.t("note._html.plural") %></h3>
   <div class="subrecord-form-container">
     <%= context.list_for(context["notes"], "notes[]") do |note| %>
       <% context.emit_template(note["jsonmodel_type"]) %>
