--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -2,7 +2,7 @@
   <%= form_context :repository, @repository.to_hash(true) do |form| %>
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">×</button>
-      <h3>Create Repository</h3>
+      <h3><%= I18n.t("actions.create") %> <%= I18n.t("repository._html.singular") %></h3>
     </div>
     <div class="modal-body">
       <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
@@ -12,8 +12,8 @@
       </fieldset>
     </div>
     <div class="modal-footer">
-      <input class="btn btn-primary" type="submit" name="commit" value="Create Repository" />
-      <button class="btn btn-cancel" data-dismiss="modal">Cancel</button>
+      <input class="btn btn-primary" type="submit" name="commit" value="<%= I18n.t("actions.create") %> <%= I18n.t("repository._html.singular") %>" />
+      <button class="btn btn-cancel" data-dismiss="modal"><%= I18n.t("actions.cancel") %></button>
     </div>
   <% end %>
 <% end %>
