--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -7,8 +7,8 @@
       <div class="span9 record-pane">
          <%= render :partial => "resources/form_container", :locals => {:form => form} %>
          <div class="form-actions">
-            <button type="submit" class="btn btn-primary">Save Resource</button>
-            <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+            <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("resource._html.singular") %></button>
+            <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
          </div>
       </div>
     </div>
