--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -5,14 +5,14 @@
   <div class="span9 record-pane">
     <%= readonly_context :resource, @resource.to_hash(true) do |readonly| %>
       <div class="btn-group" style="float: right">
-        <%= link_to "Download EAD", {:controller => :exports, :action => :download_ead, :id => @resource.id}, :class => "btn btn-small" %>
+        <%= link_to I18n.t("actions.export_ead"), {:controller => :exports, :action => :download_ead, :id => @resource.id}, :class => "btn btn-small" %>
         <% if user_can?('update_repository') %>
-          <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
+          <%= link_to I18n.t("actions.edit"), {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
         <% end %>
       </div>
-      <h2><%= @resource.title %> <span class="label label-info">Resource</span></h2>
+      <h2><%= @resource.title %> <span class="label label-info"><%= I18n.t("resource._html.singular") %></span></h2>
       <section id="basic_information">
-        <h3>Basic Information</h3>
+        <h3><%= I18n.t("resource._html.section.basic_information") %></h3>
 
         <%= readonly.label_and_textfield "title" %>
         <% if @resource.id_0 %><%= readonly.label_and_fourpartid %><% end %>
@@ -39,7 +39,7 @@
       <% end %>
       
       <section id="finding_aid" class="subrecord-form-dummy">
-        <h3>Finding Aid</h3>
+        <h3><%= I18n.t("resource._html.section.finding_aid") %></h3>
         <div class="subrecord-form-container">
           <div class="subrecord-form-fields">
             <%= readonly.label_and_textfield "finding_aid_title" %>
