--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -7,11 +7,11 @@
    <div class="span9 record-pane">
       <div class="btn-group">
         <% if user_can?('update_repository') %>
-          <%= link_to "Create Resource", {:controller => :resources, :action => :new}, :class => "btn" %>
+          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("resource._html.singular")}", {:controller => :resources, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
 
-      <h2>Resources</h2>
+      <h2><%= I18n.t("resource._html.plural") %></h2>
 
      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
        <table class="table table-striped table-bordered table-condensed">
@@ -27,9 +27,9 @@
               <td><%= resource.title %></td>
               <td>
                  <div class="btn-group" style="float: right">
-                   <%= link_to "View", {:controller => :resources, :action => :show, :id => resource.id}, :class => "btn btn-mini" %>
+                   <%= link_to I18n.t("actions.view"), {:controller => :resources, :action => :show, :id => resource.id}, :class => "btn btn-mini" %>
                    <% if user_can?('update_repository') %>
-                     <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => resource.id}, :class => "btn btn-mini" %>
+                     <%= link_to I18n.t("actions.edit"), {:controller => :resources, :action => :edit, :id => resource.id}, :class => "btn btn-mini" %>
                    <% end %>
                  </div>
               </td>
