--- a/frontend/app/views/rights_statements/_template.html.erb
+++ b/frontend/app/views/rights_statements/_template.html.erb
@@ -56,7 +56,7 @@
   <div class="inline-subform rights-type-subform">
     <div class="control-group">
       <div class="control-label"></div>
-      <div class="controls"><em>Please select a Rights Type</em></div>
+      <div class="controls"><em><%= I18n.t("rights_statement.rights_type_message") %></em></div>
     </div>
   </div>
 <% end %>
@@ -64,7 +64,7 @@
 <% define_template "rights_statement", jsonmodel_definition(:rights_statement) do |form| %>
   <div class="subrecord-form-fields">
     <% if form.obj["identifier"].blank? %>
-      <%= form.label_and_readonly "identifier", "<em>-- auto-generated upon save --</em>" %>
+      <%= form.label_and_readonly "identifier", "<em>#{I18n.t("rights_statement.identifier_auto_generate_message")}</em>" %>
     <% else %>
       <%= form.label_with_field "identifier", form.hidden_input("identifier") + "<span class='identifier-display'><span class='identifier-display-part'>#{form.obj["identifier"]}</span></span>".html_safe %>
     <% end %>
