--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -4,13 +4,13 @@
     Type: <%= params[:type] %>
   </div>
   <div class="span9 record-pane">
-    <h2>Search Results</h2>
+    <h2><%= I18n.t("search_results.title") %></h2>
     <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
       <table class="table table-striped table-bordered table-condensed">
         <thead>
         <tr>
-          <th width="160px">Record Type</th>
-          <th>Title</th>
+          <th width="160px"><%= I18n.t("search_results.result_type") %></th>
+          <th><%= I18n.t("search_results.result_title") %></th>
           <th width="70px"><!-- actions --></th>
         </tr>
         </thead>
@@ -22,14 +22,14 @@
               <%=  I18n.t("#{result["type"]}._html.singular") %>
             </td>
             <td>
-              <% if result["suppressed"] %><span class="label label-info">Suppressed</span><% end %>
+              <% if result["suppressed"] %><span class="label label-info"><%= I18n.t("states.suppressed") %></span><% end %>
               <%=  result["title"] || result['display_string'] %>
             </td>
             <td>
               <div class="btn-group" style="float: right">
-                <%= link_to "View", {:controller => :resolver, :action => :resolve_readonly, :uri => result["id"]}, :class => "btn btn-mini" %>
+                <%= link_to I18n.t("actions.view"), {:controller => :resolver, :action => :resolve_readonly, :uri => result["id"]}, :class => "btn btn-mini" %>
                 <% if user_can?('update_repository') %>
-                  <%= link_to "Edit", {:controller => :resolver, :action => :resolve_edit, :uri => result["id"]}, :class => "btn btn-mini" %>
+                  <%= link_to I18n.t("actions.edit"), {:controller => :resolver, :action => :resolve_edit, :uri => result["id"]}, :class => "btn btn-mini" %>
                 <% end %>
               </div>
             </td>
@@ -40,7 +40,7 @@
       <%= render :partial => "shared/pagination" %>
     <% else %>
       <p class="alert alert-info">
-        There were no search results for <em><%= params[:q] %></em>.
+        <%= I18n.t("search_results.no_results_prefix") %> <em><%= params[:q] %></em>.
       </p>
     <% end %>
   </div>
