--- a/frontend/app/views/subjects/_show_inline.erb
+++ b/frontend/app/views/subjects/_show_inline.erb
@@ -3,12 +3,12 @@
 %>
 
 <section id="<%= section_id %>" class="subrecord-form-dummy">
-  <h3>Subjects</h3>
+  <h3><%= I18n.t("subject._html.plural") %></h3>
   <div class="subrecord-form-container">
     <div class="subrecord-form-fields">
       <div class="row-fluid">
-        <div class="span3"><strong>Identifier</strong></div>
-        <div class="span8"><strong>Subject Heading</strong></div>
+        <div class="span3"><strong><%= I18n.t("subject.ref_id") %></strong></div>
+        <div class="span8"><strong><%= I18n.t("subject.heading") %></strong></div>
       </div>
       <% subjects.each_with_index do | subject, index | %>
         <div class="row-fluid">
