--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -7,17 +7,17 @@
    <div class="span9 record-pane">
       <div class="btn-group">
         <% if user_can?('update_repository') %>
-          <%= link_to "Create Subject", {:controller => :subjects, :action => :new}, :class => "btn" %>
+          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("subject._html.singular")}", {:controller => :subjects, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
 
-      <h2>Subjects</h2>
+      <h2><%= I18n.t("subject._html.plural") %></h2>
 
      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
        <table class="table table-striped table-bordered table-condensed">
          <thead>
            <tr>
-             <th>Subject</th>
+             <th><%= I18n.t("subject._html.singular") %></th>
              <th width="70px"><!-- actions --></th>
            </tr>
          </thead>
@@ -27,9 +27,9 @@
               <td><%= subject.display_string %></td>
               <td>
                  <div class="btn-group" style="float: right">
-                   <%= link_to "View", {:controller => :subjects, :action => :show, :id => subject.id}, :class => "btn btn-mini" %>
+                   <%= link_to I18n.t("actions.view"), {:controller => :subjects, :action => :show, :id => subject.id}, :class => "btn btn-mini" %>
                    <% if user_can?('update_repository') %>
-                     <%= link_to "Edit", {:controller => :subjects, :action => :edit, :id => subject.id}, :class => "btn btn-mini" %>
+                     <%= link_to I18n.t("actions.edit"), {:controller => :subjects, :action => :edit, :id => subject.id}, :class => "btn btn-mini" %>
                    <% end %>
                  </div>
               </td>
@@ -40,7 +40,7 @@
        <%= render :partial => "shared/pagination" %>
       <% else %>
          <p class="alert alert-info">
-            No Subjects.
+           <%= I18n.t("search_results.no_results") %>
          </p>
       <% end %>
    </div>
