--- a/frontend/app/views/users/index.html.erb
+++ b/frontend/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
    </div>
    <div class="span9 record-pane">
       <div class="btn-group">
-        <%= link_to "Create User", {:controller => :users, :action => :new}, :class => "btn" %>
+        <%= link_to "#{I18n.t("actions.create")} #{I18n.t("user._html.singular")}", {:controller => :users, :action => :new}, :class => "btn" %>
       </div>
 
       <h2>Users</h2>
@@ -20,7 +20,7 @@
        <table class="table table-striped table-bordered table-condensed">
          <thead>
            <tr>
-             <th>User</th>
+             <th><%= I18n.t("user._html.singular") %></th>
              <th width="70px"><!-- actions --></th>
            </tr>
          </thead>
@@ -30,7 +30,7 @@
               <td><%= user.username %></td>
               <td>
                  <div class="btn-group" style="float: right">
-                   <%= link_to "Edit", {:controller => :users, :action => :edit, :id => user.id}, :class => "btn btn-mini" %>
+                   <%= link_to I18n.t("actions.edit"), {:controller => :users, :action => :edit, :id => user.id}, :class => "btn btn-mini" %>
                  </div>
               </td>
             </tr>
